# kamilatop-Functional_programming_course

./: README.md  colon.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: colon-0.1.0.0-inplace.conf  package.cache
src/: BaseStructureFix.hs  CommentParser.hs  Comparisons.hs  ControlFlow.hs  IOHandler.hs  ParserEngine.hs  StackCommentChecker.hs  StringHandler.hs  Variables.hs
test/: TestSuite.hs
